# computer-vision-labs

./: .gitignore  README.md  main.cpp
lab01/task1/: main.cpp
lab01/task2/: CMakeLists.txt  main.cpp
lab01/task3/: CMakeLists.txt  main.cpp
lab01/task4/: CMakeLists.txt  main.cpp
lab01/task5/: main.cpp
lab01/task6/: main.cpp
lab02/: README.md
lab02/task1/: main.cpp
lab02/task2/: CMakeLists.txt  main.cpp
lab02/task2/include/: filters.h
lab02/task2/src/: filters.cpp
lab02/task3/: CMakeLists.txt  main.cpp
lab02/task3/include/: filters.h
lab02/task3/src/: filters.cpp
lab02/task4/: main.cpp
lab02/task5/: main.cpp
lab03/task1/: main.cpp
lab03/task2/: main.cpp
lab03/task3/: main.cpp
lab03/task4/: main.cpp
lab03/task5/: main.cpp
lab04/: README.md
lab04/task1/: CMakeLists.txt  main.cpp
lab04/task1/include/: canny_image.h
lab04/task1/src/: canny_image.cpp
lab04/task2/: main.cpp
lab04/task3/: CMakeLists.txt  main.cpp
lab04/task3/include/: canny_image.h  line.h
lab04/task3/src/: line.cpp
lab04/task4/: main.cpp
lab05/: README.md
lab05/task1/: main.cpp
lab05/task2/: CMakeLists.txt  main.cpp
lab05/task2/include/: clustering.h
lab05/task2/src/: clustering.cpp
lab05/task3/: main.cpp
lab06/task1/: CMakeLists.txt  main.cpp
lab07/task1/: CMakeLists.txt  main.cpp
lab07/task1/include/: utils_opencv.h
lab07/task1/src/: panoramic_utils.cpp  utils_opencv.cpp
lab08/task2/: CMakeLists.txt  main.cpp
